user input area will not grow outside of website and wont generate horizontal scrollbar. other bugs remain.

--- a/static/assets/css/style-demo.css
+++ b/static/assets/css/style-demo.css
@@ -3,6 +3,7 @@ body {
     height: 85vh;
     margin: 20px;
     margin-top: 8px;
+    overflow-x: hidden;
   }
   
 button {
@@ -127,7 +128,7 @@ p {
 
 .input-sizer {
     background-color: #141414;
-    display: inline-grid;
+    display: inline-block;
     vertical-align: top;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -154,7 +155,9 @@ textarea {
     caret-color: white;
     color: white;
     border: 0;
-    padding: 0;    
+    padding: 0;
+    resize: none;
+    width: 100%;
 }
 
 textarea:focus {
